[package]
name = "jawt-sys"
description = "Cross-platform Rust bindings to Java AWT"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"

[dependencies]
jni-sys = "0.3.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(all(target_family = "unix", not(target_vendor = "apple"), not(target_os = "android")))'.dependencies]
x11-dl = "2.19.1"
