[package]
name = "jawt-sys"
description = "Raw bindings to Java AWT"
homepage = "https://github.com/kotween/jawt"
repository = "https://github.com/kotween/jawt"
readme = "README.md"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"
categories = ["external-ffi-bindings"]
keywords = ["java", "jni", "jawt", "awt"]
license = "MIT OR Apache-2.0"
exclude = [".bindgen"]

[dependencies]
jni-sys = "0.3.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(all(target_family = "unix", not(target_vendor = "apple"), not(target_os = "android")))'.dependencies]
x11-dl = "2.19.1"
