[package]
name = "jawt"
description = "Cross-platform Rust bindings to Java AWT"
homepage = "https://github.com/kotween/jawt"
repository = "https://github.com/kotween/jawt"
readme = "README.md"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"
categories = ["api-bindings"]
keywords = ["java", "jni", "jawt", "awt"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jawt-sys = { path = "../jawt-sys" }
